# IBS

./: .gitignore  CMakeLists.txt  StopWatch.cpp  definitions.h  ibs.cpp  ibs.h  main.cpp  voronoi.cpp  voronoi.h
apps/: CMakeLists.txt  main.cpp
include/: definitions.h  ibs.h  voronoi.h
src/: CMakeLists.txt  Util.h  ibs.cpp  ibs.h  main.cpp  main_test.cpp  voronoi.cpp
test/: CMakeLists.txt  main_test.cpp
