
set(PROJECT_MAIN_TEST ${PROJECT_NAME}_main_test)

#for testing
set(IBS_TEST_SOURCES main_test.cpp)

add_executable(${PROJECT_MAIN_TEST} ${IBS_TEST_SOURCES})

set_target_properties(${PROJECT_MAIN_TEST} PROPERTIES CXX_STANDARD 11  CXX_STANDARD_REQUIRED ON  CXX_EXTENSIONS OFF)
target_link_libraries (${PROJECT_MAIN_TEST} ${QHULL_LIBRARIES} ${PCL_LIBRARIES} ${PROJECT_NAME})
